--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,15 @@
   box-sizing: border-box;
   font-family: var(--font-poppins);
 }
+
+.container {
+  max-width: 95%;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.container_flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
