feat: adicionando sistema de usuarios

--- a/src/components/banner.module.css
+++ b/src/components/banner.module.css
@@ -1,4 +1,7 @@
 .banner {
-    width: 100%;
-    height: auto;
+    height: calc(100vh - var(--header-height));
+    width: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
