--- a/src/components/userButton.module.css
+++ b/src/components/userButton.module.css
@@ -1,5 +1,18 @@
 .user {
-    width: 35px;
+    width: 20px;
     height: auto;
     cursor: pointer;
+}
+
+.link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+}
+
+.link span {
+    color: #FFF;
+    text-decoration: dashed;
+    font-size: 12px;
 }
